Fixed embeddable unit question title spacing.

--- a/app/assets/stylesheets/embeddable_unit.css.sass
+++ b/app/assets/stylesheets/embeddable_unit.css.sass
@@ -23,7 +23,6 @@ body.statisfy_embed
     height: 56px
     position: relative
     font-size: 18px
-    line-height: 18px
     font-family: "Roboto", sans-serif
     font-weight: 500
     color: rgba(35, 31, 32, 0.0)
@@ -35,7 +34,7 @@ body.statisfy_embed
     .table
       position: absolute
       left: 74px
-      top: 5px
+      top: 3px
       width: 155px
       height: 56px
       display: table
